--- a/hw2/first.ipynb
+++ b/hw2/first.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import sys\n",
-    "from I"
+    "from IPython.display import display"
    ]
   },
   {
@@ -66,6 +66,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "1",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m--------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-69-e3625cebd980>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mfiltered_results_dfs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m: 1"
+     ]
+    }
+   ],
+   "source": [
+    "filtered_results_dfs[1]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -74,11 +95,259 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>team</th>\n",
+       "      <th>mask</th>\n",
+       "      <th>current</th>\n",
+       "      <th>questionsTotal</th>\n",
+       "      <th>synchRequest</th>\n",
+       "      <th>position</th>\n",
+       "      <th>controversials</th>\n",
+       "      <th>flags</th>\n",
+       "      <th>teamMembers</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">22</th>\n",
+       "      <th>0</th>\n",
+       "      <td>{'id': 1, 'name': 'Неспроста', 'town': {'id': ...</td>\n",
+       "      <td>0111011101101110001101110011111111110011111100...</td>\n",
+       "      <td>{'name': 'КП - Неспроста', 'town': {'id': 201,...</td>\n",
+       "      <td>67</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[{'flag': None, 'usedRating': 0, 'rating': 0, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>{'id': 2, 'name': 'Афина', 'town': {'id': 201,...</td>\n",
+       "      <td>0111111101011010010101110111111111110011011111...</td>\n",
+       "      <td>{'name': 'Афина', 'town': {'id': 201, 'name': ...</td>\n",
+       "      <td>65</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[{'flag': None, 'usedRating': 0, 'rating': 0, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>{'id': 670, 'name': 'Ксеп', 'town': {'id': 201...</td>\n",
+       "      <td>0011111101011010011101110011111111110111111111...</td>\n",
+       "      <td>{'name': 'Ксеп', 'town': {'id': 201, 'name': '...</td>\n",
+       "      <td>65</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[{'flag': None, 'usedRating': 0, 'rating': 0, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>{'id': 173, 'name': 'ЮМА', 'town': {'id': 285,...</td>\n",
+       "      <td>0111111001101110001101111011111111110100111111...</td>\n",
+       "      <td>{'name': 'ЮМА-Энергокапитал', 'town': {'id': 2...</td>\n",
+       "      <td>64</td>\n",
+       "      <td>None</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[{'flag': None, 'usedRating': 0, 'rating': 0, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>{'id': 175, 'name': 'Транссфера', 'town': {'id...</td>\n",
+       "      <td>0111111001101111001111111011111110110010111110...</td>\n",
+       "      <td>{'name': 'Транссфера', 'town': {'id': 285, 'na...</td>\n",
+       "      <td>64</td>\n",
+       "      <td>None</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">6456</th>\n",
+       "      <th>2</th>\n",
+       "      <td>{'id': 55612, 'name': 'Экстремаль', 'town': {'...</td>\n",
+       "      <td>100110001100111011011110100100010101010</td>\n",
+       "      <td>{'name': 'Экстремаль', 'town': {'id': 286, 'na...</td>\n",
+       "      <td>20</td>\n",
+       "      <td>None</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[{'flag': 'Л', 'usedRating': 9087, 'rating': 9...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>{'id': 68457, 'name': 'Орда', 'town': {'id': 3...</td>\n",
+       "      <td>100110101100001111110110100100010001010</td>\n",
+       "      <td>{'name': 'Орда', 'town': {'id': 373, 'name': '...</td>\n",
+       "      <td>19</td>\n",
+       "      <td>None</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[{'flag': 'Л', 'usedRating': 6807, 'rating': 6...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>{'id': 43261, 'name': 'Господин Брейтенбихер',...</td>\n",
+       "      <td>000001111100111001010110000100111001011</td>\n",
+       "      <td>{'name': 'Нежность', 'town': {'id': 164, 'name...</td>\n",
+       "      <td>19</td>\n",
+       "      <td>None</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[{'flag': 'Л', 'usedRating': 9601, 'rating': 9...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>{'id': 69918, 'name': 'Teddyhaters', 'town': {...</td>\n",
+       "      <td>100101101100100100010110100100010001010</td>\n",
+       "      <td>{'name': 'Teddyhaters', 'town': {'id': 285, 'n...</td>\n",
+       "      <td>16</td>\n",
+       "      <td>None</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[{'flag': 'Л', 'usedRating': 6401, 'rating': 6...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>{'id': 63129, 'name': 'Якуба', 'town': {'id': ...</td>\n",
+       "      <td>101000100110000110001000101000010100001</td>\n",
+       "      <td>{'name': 'Арабская ночь дальный восток', 'town...</td>\n",
+       "      <td>13</td>\n",
+       "      <td>None</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[{'flag': 'Б', 'usedRating': 2283, 'rating': 2...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>435225 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                     team  \\\n",
+       "22   0  {'id': 1, 'name': 'Неспроста', 'town': {'id': ...   \n",
+       "     1  {'id': 2, 'name': 'Афина', 'town': {'id': 201,...   \n",
+       "     2  {'id': 670, 'name': 'Ксеп', 'town': {'id': 201...   \n",
+       "     3  {'id': 173, 'name': 'ЮМА', 'town': {'id': 285,...   \n",
+       "     4  {'id': 175, 'name': 'Транссфера', 'town': {'id...   \n",
+       "...                                                   ...   \n",
+       "6456 2  {'id': 55612, 'name': 'Экстремаль', 'town': {'...   \n",
+       "     3  {'id': 68457, 'name': 'Орда', 'town': {'id': 3...   \n",
+       "     4  {'id': 43261, 'name': 'Господин Брейтенбихер',...   \n",
+       "     5  {'id': 69918, 'name': 'Teddyhaters', 'town': {...   \n",
+       "     6  {'id': 63129, 'name': 'Якуба', 'town': {'id': ...   \n",
+       "\n",
+       "                                                     mask  \\\n",
+       "22   0  0111011101101110001101110011111111110011111100...   \n",
+       "     1  0111111101011010010101110111111111110011011111...   \n",
+       "     2  0011111101011010011101110011111111110111111111...   \n",
+       "     3  0111111001101110001101111011111111110100111111...   \n",
+       "     4  0111111001101111001111111011111110110010111110...   \n",
+       "...                                                   ...   \n",
+       "6456 2            100110001100111011011110100100010101010   \n",
+       "     3            100110101100001111110110100100010001010   \n",
+       "     4            000001111100111001010110000100111001011   \n",
+       "     5            100101101100100100010110100100010001010   \n",
+       "     6            101000100110000110001000101000010100001   \n",
+       "\n",
+       "                                                  current  questionsTotal  \\\n",
+       "22   0  {'name': 'КП - Неспроста', 'town': {'id': 201,...              67   \n",
+       "     1  {'name': 'Афина', 'town': {'id': 201, 'name': ...              65   \n",
+       "     2  {'name': 'Ксеп', 'town': {'id': 201, 'name': '...              65   \n",
+       "     3  {'name': 'ЮМА-Энергокапитал', 'town': {'id': 2...              64   \n",
+       "     4  {'name': 'Транссфера', 'town': {'id': 285, 'na...              64   \n",
+       "...                                                   ...             ...   \n",
+       "6456 2  {'name': 'Экстремаль', 'town': {'id': 286, 'na...              20   \n",
+       "     3  {'name': 'Орда', 'town': {'id': 373, 'name': '...              19   \n",
+       "     4  {'name': 'Нежность', 'town': {'id': 164, 'name...              19   \n",
+       "     5  {'name': 'Teddyhaters', 'town': {'id': 285, 'n...              16   \n",
+       "     6  {'name': 'Арабская ночь дальный восток', 'town...              13   \n",
+       "\n",
+       "       synchRequest  position controversials flags  \\\n",
+       "22   0         None       1.0             []    []   \n",
+       "     1         None       2.5             []    []   \n",
+       "     2         None       2.5             []    []   \n",
+       "     3         None       4.5             []    []   \n",
+       "     4         None       4.5             []    []   \n",
+       "...             ...       ...            ...   ...   \n",
+       "6456 2         None       3.0             []    []   \n",
+       "     3         None       4.5             []    []   \n",
+       "     4         None       4.5             []    []   \n",
+       "     5         None       6.0             []    []   \n",
+       "     6         None       7.0             []    []   \n",
+       "\n",
+       "                                              teamMembers  \n",
+       "22   0  [{'flag': None, 'usedRating': 0, 'rating': 0, ...  \n",
+       "     1  [{'flag': None, 'usedRating': 0, 'rating': 0, ...  \n",
+       "     2  [{'flag': None, 'usedRating': 0, 'rating': 0, ...  \n",
+       "     3  [{'flag': None, 'usedRating': 0, 'rating': 0, ...  \n",
+       "     4                                                 []  \n",
+       "...                                                   ...  \n",
+       "6456 2  [{'flag': 'Л', 'usedRating': 9087, 'rating': 9...  \n",
+       "     3  [{'flag': 'Л', 'usedRating': 6807, 'rating': 6...  \n",
+       "     4  [{'flag': 'Л', 'usedRating': 9601, 'rating': 9...  \n",
+       "     5  [{'flag': 'Л', 'usedRating': 6401, 'rating': 6...  \n",
+       "     6  [{'flag': 'Б', 'usedRating': 2283, 'rating': 2...  \n",
+       "\n",
+       "[435225 rows x 9 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "concated = pd.concat(filtered_results_dfs.values(), keys=results_dfs.keys())\n"
+    "concated = pd.concat(filtered_results_dfs.values(), keys=filtered_results_dfs.keys())\n",
+    "display(concated)"
    ]
   },
   {
