--- a/hw2/first.ipynb
+++ b/hw2/first.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,9 @@
     "pq_df['qid'] = qid\n",
     "pq_df['tournament'] = tournament\n",
     "pq_df['tid'] = tid\n",
-    "pq_df['res'] = np.int8(res)"
+    "pq_df['res'] = np.int8(res)\n",
+    "pq_df['qid'] = pq_df['qid'].astype(str)\n",
+    "pq_df['pid'] = pq_df['pid'].astype(str)"
    ]
   },
   {
@@ -170,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,21 +255,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/a18570724/.local/lib/python3.7/site-packages/sklearn/preprocessing/_encoders.py:415: FutureWarning: The handling of integer data will change in version 0.22. Currently, the categories are determined based on the range [0, max(values)], while in the future they will be determined based on the unique values.\n",
-      "If you want the future behaviour and silence this warning, you can specify \"categories='auto'\".\n",
-      "In case you used a LabelEncoder before this OneHotEncoder to convert the categories to integers, then you can now use the OneHotEncoder directly.\n",
-      "  warnings.warn(msg, FutureWarning)\n",
-      "/Users/a18570724/.local/lib/python3.7/site-packages/sklearn/preprocessing/_encoders.py:451: DeprecationWarning: The 'categorical_features' keyword is deprecated in version 0.20 and will be removed in 0.22. You can use the ColumnTransformer instead.\n",
-      "  \"use the ColumnTransformer instead.\", DeprecationWarning)\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -278,14 +268,14 @@
        "                   warm_start=False)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "encoder = OneHotEncoder(categorical_features=[0, 1], sparse=True, dtype=np.int8)\n",
-    "encoder.fit(pq_df)\n",
+    "encoder = OneHotEncoder(sparse=True, categories=[pq_df['pid'].unique().tolist(), pq_df['qid'].unique().tolist()])\n",
+    "encoder.fit(pq_df[['pid', 'qid']])\n",
     "pq_df_oh = encoder.transform(pq_df[['pid', 'qid']])\n",
     "clf = LogisticRegression(solver='lbfgs', n_jobs=10)\n",
     "clf.fit(pq_df_oh, pq_df['res'])"
@@ -300,13 +290,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_tournaments_rating_n_corrs(encoder, player_q_df, weights, t_results_test):\n",
     "    t_results_test_ = t_results_test.copy()\n",
-    "    feature_names = np.array([fname.replace('.0','') for fname in encoder.get_feature_names(pq_df.columns[:2])])\n",
+    "    feature_names = encoder.get_feature_names(pq_df.columns[:2])\n",
     "    players = feature_names[[fname.startswith('pid') for fname in feature_names]]\n",
     "    players = np.array(list(map(lambda x: np.int32(x.replace('pid_','')), players)))\n",
     "    players_scores = pd.DataFrame({'player_id': players, 'score': weights[:len(players)]}).set_index('player_id')\n",
@@ -321,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,15 +320,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.744970560215479\n",
-      "0.5876959484196173\n"
+      "0.7444559048119628\n",
+      "0.5867546216490609\n"
      ]
     }
    ],
@@ -381,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,129 +405,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>iter</th>\n",
-       "      <th>log_ll</th>\n",
-       "      <th>Kendall_corr</th>\n",
-       "      <th>Spearman_corr</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>-0.570627</td>\n",
-       "      <td>0.581917</td>\n",
-       "      <td>0.736725</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>-0.421400</td>\n",
-       "      <td>0.590454</td>\n",
-       "      <td>0.746539</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>-0.355291</td>\n",
-       "      <td>0.589807</td>\n",
-       "      <td>0.745936</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>-0.331647</td>\n",
-       "      <td>0.586606</td>\n",
-       "      <td>0.742638</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>-0.323244</td>\n",
-       "      <td>0.585941</td>\n",
-       "      <td>0.741234</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>6</td>\n",
-       "      <td>-0.320168</td>\n",
-       "      <td>0.584214</td>\n",
-       "      <td>0.739710</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>7</td>\n",
-       "      <td>-0.319000</td>\n",
-       "      <td>0.583554</td>\n",
-       "      <td>0.738823</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>8</td>\n",
-       "      <td>-0.318539</td>\n",
-       "      <td>0.583433</td>\n",
-       "      <td>0.738911</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>9</td>\n",
-       "      <td>-0.318352</td>\n",
-       "      <td>0.583373</td>\n",
-       "      <td>0.738978</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>10</td>\n",
-       "      <td>-0.318276</td>\n",
-       "      <td>0.583314</td>\n",
-       "      <td>0.738720</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  iter    log_ll  Kendall_corr  Spearman_corr\n",
-       "0    1 -0.570627      0.581917       0.736725\n",
-       "1    2 -0.421400      0.590454       0.746539\n",
-       "2    3 -0.355291      0.589807       0.745936\n",
-       "3    4 -0.331647      0.586606       0.742638\n",
-       "4    5 -0.323244      0.585941       0.741234\n",
-       "5    6 -0.320168      0.584214       0.739710\n",
-       "6    7 -0.319000      0.583554       0.738823\n",
-       "7    8 -0.318539      0.583433       0.738911\n",
-       "8    9 -0.318352      0.583373       0.738978\n",
-       "9   10 -0.318276      0.583314       0.738720"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "weights = np.random.rand(pq_df_oh.shape[1])\n",
     "em_df = pd.DataFrame(columns=['iter', 'log_ll', 'Kendall_corr', 'Spearman_corr'])\n",
@@ -569,7 +439,38 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_tournaments_difficult_rating(weights, pq_df, encoder):\n",
+    "    feature_names = encoder.get_feature_names(pq_df.columns[:2])\n",
+    "    questions = feature_names[[fname.startswith('qid') for fname in feature_names]]\n",
+    "    questions = np.array(list(map(lambda x: x.replace('qid_',''), questions)))\n",
+    "    questions_scores = pd.DataFrame({'qid': questions , 'score': weights[-len(questions):]})\n",
+    "    train_tournaments_diffs = pq_df.merge(questions_scores, on='qid').groupby('tournament')['score'].mean()\n",
+    "    diffs = []\n",
+    "    names = []\n",
+    "    tids = []\n",
+    "    for tournament_id in train_tournaments_diffs.keys():\n",
+    "        diffs.append(train_tournaments_diffs[tournament_id])\n",
+    "        names.append(tournaments_dict[tournament_id]['name'])\n",
+    "        tids.append(tournament_id)\n",
+    "    tournaments_diff_rating = pd.DataFrame({\n",
+    "        'tid' : tids,\n",
+    "        'name': names,\n",
+    "        'diff': diffs\n",
+    "    }).sort_values(by='diff')\n",
+    "    tournaments_diff_rating['place'] = tournamets_diff_rating.reset_index().index + 1\n",
+    "    tournaments_diff_rating = tournaments_diff_rating[['name', 'place']].set_index('place')\n",
+    "    return tournaments_diff_rating"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_tournaments_difficult_rating(clf.coef_[0], pq_df, encoder).head(25)"
+   ]
   }
  ],
  "metadata": {
